fix checkbox alignment

--- a/groupie/app/static/less/style.less
+++ b/groupie/app/static/less/style.less
@@ -61,4 +61,8 @@ hr.divisor {
 		font-family: 'Oxygen', sans-serif;
 		color: @SecondTitlesColor;
 	}
+	
+	.checkbox input{
+		margin-top: 15px;
+	}
 }	
